<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity"
    android:background="#000000">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:src="@drawable/bitcoin6"
                android:scaleType="centerCrop"
                android:layout_marginTop="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crypto"
                android:textSize="40sp"
                android:textColor="#fff"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/abril_fatface"
                android:layout_marginTop="60sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textSize="40sp"
                android:textColor="#fff"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/abril_fatface" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/invest"
                android:textColor="#fff"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_start"
                android:padding="40dp"
                android:text="@string/start"
                android:textSize="30sp"
                android:fontFamily="@font/agbalumo"
                android:layout_gravity="end"
                android:layout_marginTop="130dp"
                android:id="@+id/btnstart"
                android:textColor="#FDE300"/>











        </LinearLayout>







    </ScrollView>


</LinearLayout>